--- a/HuaShanApp/app/src/main/res/layout/fragment_details_1.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_details_1.xml
@@ -207,6 +207,7 @@
                     android:text="回款方式"/>
 
                 <TextView
+                    android:id="@+id/re_model"
                     app:layout_widthPercent="60%"
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
