--- a/HuaShanApp/app/src/main/res/layout/view_details_1.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_details_1.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="40dp"
                 android:paddingRight="40dp"
-                android:text="12345678"/>
+                android:text="无"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="40dp"
                 android:paddingRight="40dp"
-                android:text="12345678"/>
+                android:text="无"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="40dp"
                 android:paddingRight="40dp"
-                android:text="12345678"/>
+                android:text="无"/>
 
             <TextView
                 android:layout_width="match_parent"
