--- a/HuaShanApp/app/src/main/res/layout/view_details_3.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_details_3.xml
@@ -30,7 +30,7 @@
                             android:id="@+id/img_1"
                             android:layout_width="30dp"
                             android:layout_height="match_parent"
-                            android:background="@drawable/oo"
+                            android:background="@drawable/ol"
                              />
 
                         <TextView
@@ -41,13 +41,13 @@
                             android:layout_marginLeft="4dp"
                             android:text="调查"
                             android:textSize="11dp"
-                            android:textColor="#fff"/>
+                            android:textColor="#4f4f4f"/>
 
                         <TextView
                             android:id="@+id/tv_1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2016-10-31   12:00       调查人：wanghui"
+                            android:text=""
                             android:layout_marginLeft="60dp"
                             android:layout_gravity="center_vertical"
                              />
@@ -63,7 +63,7 @@
                             android:id="@+id/img_2"
                             android:layout_width="30dp"
                             android:layout_height="match_parent"
-                            android:background="@drawable/oo"
+                            android:background="@drawable/ol"
                              />
 
                         <TextView
@@ -74,14 +74,14 @@
                             android:layout_marginLeft="4dp"
                             android:text="审查"
                             android:textSize="11dp"
-                            android:textColor="#fff"/>
+                            android:textColor="#4f4f4f"/>
 
                         <TextView
                             android:id="@+id/tv_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="60dp"
-                            android:text="2016-10-31   12:00       调查人：wanghui"
+                            android:text=""
                             android:layout_gravity="center_vertical"/>
 
                     </android.support.percent.PercentFrameLayout>
@@ -95,7 +95,7 @@
                             android:id="@+id/img_3"
                             android:layout_width="30dp"
                             android:layout_height="match_parent"
-                            android:background="@drawable/lo"
+                            android:background="@drawable/ol"
                              />
 
                         <TextView
@@ -106,7 +106,7 @@
                             android:layout_marginLeft="4dp"
                             android:text="购买"
                             android:textSize="11dp"
-                            android:textColor="#fff"/>
+                            android:textColor="#4f4f4f"/>
 
                         <!--android:textColor="#ff8000"-->
                         <TextView
@@ -114,7 +114,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="60dp"
-                            android:text="2016-10-31   12:00       购买中"
+                            android:text=""
                             android:layout_gravity="center_vertical"/>
 
                     </android.support.percent.PercentFrameLayout>
