--- a/HuaShanApp/app/src/main/res/layout/activity_unauthorized.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_unauthorized.xml
@@ -204,6 +204,7 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="12%"
                 app:layout_marginTopPercent="31.1%"
+                android:visibility="gone"
                 android:background="#fff">
 
                 <ImageView
@@ -253,6 +254,7 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="12%"
                 app:layout_marginTopPercent="43.2%"
+                android:visibility="gone"
                 android:background="#fff">
 
                 <ImageView
@@ -302,6 +304,7 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="12%"
                 app:layout_marginTopPercent="55.4%"
+                android:visibility="gone"
                 android:background="#fff">
 
                 <ImageView
@@ -357,14 +360,15 @@
                 android:textColor="#f00"
                 android:visibility="gone"/>
 
+            <!--原app:layout_marginTopPercent="73%" -->
             <TextView
                 android:id="@+id/btn_next_step"
                 app:layout_widthPercent="90%"
                 app:layout_heightPercent="10%"
-                app:layout_marginTopPercent="73%"
+                app:layout_marginTopPercent="35%"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="下一步"
+                android:text="确定"
                 android:textColor="#fff"
                 android:textSize="17dp"
                 android:background="@drawable/btn_bg_img_0894ec_5dp"
@@ -375,6 +379,7 @@
                 app:layout_heightPercent="5%"
                 app:layout_marginTopPercent="85%"
                 app:layout_marginLeftPercent="5%"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <CheckBox
