--- a/HuaShanApp/app/src/main/res/layout/activity_bindcard.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_bindcard.xml
@@ -77,7 +77,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
 
             >
 
@@ -111,44 +111,63 @@
                 app:layout_marginTopPercent="5%"
                 android:background="#fff">
 
-                <ImageView
-                    android:id="@+id/clean_name"
-                    app:layout_widthPercent="6%"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/clean_icon"
-                    app:layout_marginRightPercent="5%"
-                    android:layout_gravity="right"
-                    android:visibility="gone"
-                    android:onClick="@{handler.cleanName}"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/clean_name"-->
+                    <!--app:layout_widthPercent="6%"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:src="@drawable/clean_icon"-->
+                    <!--app:layout_marginRightPercent="5%"-->
+                    <!--android:layout_gravity="right"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:onClick="@{handler.cleanName}"-->
+                    <!--/>-->
 
-                <ImageView
-                    android:id="@+id/hint1_img"
-                    app:layout_widthPercent="5%"
-                    app:layout_heightPercent="15%"
-                    app:layout_marginLeftPercent="22%"
-                    app:layout_marginTopPercent="15%"
-                    android:src="@drawable/error_icon"
-                    android:visibility="gone"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/hint1_img"-->
+                    <!--app:layout_widthPercent="5%"-->
+                    <!--app:layout_heightPercent="15%"-->
+                    <!--app:layout_marginLeftPercent="22%"-->
+                    <!--app:layout_marginTopPercent="15%"-->
+                    <!--android:src="@drawable/error_icon"-->
+                    <!--android:visibility="gone"-->
+                    <!--/>-->
 
-                <com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText
-                    android:id="@+id/fet_name"
-                    app:layout_widthPercent="84%"
-                    app:layout_heightPercent="65%"
+                <!--<com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText-->
+                    <!--android:id="@+id/fet_name"-->
+                    <!--app:layout_widthPercent="84%"-->
+                    <!--app:layout_heightPercent="65%"-->
+                    <!--app:layout_marginTopPercent="10%"-->
+                    <!--app:layout_marginLeftPercent="5%"-->
+                    <!--&gt;-->
+                    <!--<EditText-->
+                        <!--android:id="@+id/use_name"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:hint="真实姓名"-->
+                        <!--android:background="#00ffffff"-->
+                        <!--android:textSize="15dp"-->
+                        <!--/>-->
+                <!--</com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>-->
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_marginTopPercent="10%"
                     app:layout_marginLeftPercent="5%"
-                    >
-                    <EditText
-                        android:id="@+id/use_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:hint="真实姓名"
-                        android:background="#00ffffff"
-                        android:textSize="15dp"
-                        />
-                </com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>
+                    android:text="真实姓名"
+                    android:textSize="12dp"
+                    android:textColor="#a00894EC"/>
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_marginTopPercent="50%"
+                    app:layout_marginLeftPercent="5%"
+                    android:text="真实姓名"
+                    android:textSize="15dp"
+                    android:textColor="#50000000"/>
 
             </android.support.percent.PercentFrameLayout>
 
@@ -159,45 +178,64 @@
                 app:layout_marginTopPercent="17.1%"
                 android:background="#fff">
 
-                <ImageView
-                    android:id="@+id/clean_idnum"
-                    app:layout_widthPercent="6%"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/clean_icon"
-                    app:layout_marginRightPercent="5%"
-                    android:layout_gravity="right"
-                    android:visibility="gone"
-                    android:onClick="@{handler.cleanIdnum}"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/clean_idnum"-->
+                    <!--app:layout_widthPercent="6%"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:src="@drawable/clean_icon"-->
+                    <!--app:layout_marginRightPercent="5%"-->
+                    <!--android:layout_gravity="right"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:onClick="@{handler.cleanIdnum}"-->
+                    <!--/>-->
 
-                <ImageView
-                    android:id="@+id/hint2_img"
-                    app:layout_widthPercent="5%"
-                    app:layout_heightPercent="15%"
-                    app:layout_marginLeftPercent="22%"
-                    app:layout_marginTopPercent="15%"
-                    android:src="@drawable/error_icon"
-                    android:visibility="gone"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/hint2_img"-->
+                    <!--app:layout_widthPercent="5%"-->
+                    <!--app:layout_heightPercent="15%"-->
+                    <!--app:layout_marginLeftPercent="22%"-->
+                    <!--app:layout_marginTopPercent="15%"-->
+                    <!--android:src="@drawable/error_icon"-->
+                    <!--android:visibility="gone"-->
+                    <!--/>-->
 
-                <com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText
-                    android:id="@+id/fet_idnum"
-                    app:layout_widthPercent="84%"
-                    app:layout_heightPercent="65%"
+                <!--<com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText-->
+                    <!--android:id="@+id/fet_idnum"-->
+                    <!--app:layout_widthPercent="84%"-->
+                    <!--app:layout_heightPercent="65%"-->
+                    <!--app:layout_marginTopPercent="10%"-->
+                    <!--app:layout_marginLeftPercent="5%"-->
+                    <!--&gt;-->
+                    <!--<EditText-->
+                        <!--android:id="@+id/id_num"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:inputType="number"-->
+                        <!--android:hint="身份证号"-->
+                        <!--android:background="#00ffffff"-->
+                        <!--android:textSize="15dp"-->
+                        <!--/>-->
+                <!--</com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>-->
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_marginTopPercent="10%"
                     app:layout_marginLeftPercent="5%"
-                    >
-                    <EditText
-                        android:id="@+id/id_num"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:inputType="number"
-                        android:hint="身份证号"
-                        android:background="#00ffffff"
-                        android:textSize="15dp"
-                        />
-                </com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>
+                    android:text="身份证号"
+                    android:textSize="12dp"
+                    android:textColor="#a00894EC"/>
+
+                <TextView
+                    android:id="@+id/tv_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_marginTopPercent="50%"
+                    app:layout_marginLeftPercent="5%"
+                    android:text="身份证号"
+                    android:textSize="15dp"
+                    android:textColor="#50000000"/>
 
             </android.support.percent.PercentFrameLayout>
 
@@ -252,55 +290,92 @@
 
             <!--卡类型/发卡行-->
             <android.support.percent.PercentFrameLayout
+                android:id="@+id/pf_bankk"
                 android:layout_width="match_parent"
                 app:layout_heightPercent="12%"
                 app:layout_marginTopPercent="43.2%"
-                android:background="#fff">
+                android:background="#fff"
+                android:onClick="@{handler.getBankData}">
 
-                <ImageView
-                    android:id="@+id/clean_bank"
-                    app:layout_widthPercent="6%"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/clean_icon"
-                    app:layout_marginRightPercent="5%"
-                    android:layout_gravity="right"
-                    android:visibility="gone"
-                    android:onClick="@{handler.cleanBank}"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/clean_bank"-->
+                    <!--app:layout_widthPercent="6%"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:src="@drawable/clean_icon"-->
+                    <!--app:layout_marginRightPercent="5%"-->
+                    <!--android:layout_gravity="right"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:onClick="@{handler.cleanBank}"-->
+                    <!--/>-->
 
-                <ImageView
-                    android:id="@+id/hint4_img"
-                    app:layout_widthPercent="5%"
-                    app:layout_heightPercent="15%"
-                    app:layout_marginLeftPercent="31%"
-                    app:layout_marginTopPercent="15%"
-                    android:src="@drawable/error_icon"
-                    android:visibility="gone"
-                    />
+                <!--<ImageView-->
+                    <!--android:id="@+id/hint4_img"-->
+                    <!--app:layout_widthPercent="5%"-->
+                    <!--app:layout_heightPercent="15%"-->
+                    <!--app:layout_marginLeftPercent="31%"-->
+                    <!--app:layout_marginTopPercent="15%"-->
+                    <!--android:src="@drawable/error_icon"-->
+                    <!--android:visibility="gone"-->
+                    <!--/>-->
 
-                <com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText
-                    android:id="@+id/fet_bank"
-                    app:layout_widthPercent="84%"
-                    app:layout_heightPercent="65%"
-                    app:layout_marginTopPercent="10%"
+                <!--<com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText-->
+                    <!--android:id="@+id/fet_bank"-->
+                    <!--app:layout_widthPercent="84%"-->
+                    <!--app:layout_heightPercent="65%"-->
+                    <!--app:layout_marginTopPercent="10%"-->
+                    <!--app:layout_marginLeftPercent="5%"-->
+                    <!--&gt;-->
+                    <!--<EditText-->
+                        <!--android:id="@+id/bank"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:maxLength="12"-->
+                        <!--android:hint="卡类型/发卡行"-->
+                        <!--android:background="#00ffffff"-->
+                        <!--android:textSize="15dp"-->
+                        <!--/>-->
+                <!--</com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>-->
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    app:layout_heightPercent="100%"
                     app:layout_marginLeftPercent="5%"
-                    >
-                    <EditText
-                        android:id="@+id/bank"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:maxLength="12"
-                        android:hint="卡类型/发卡行"
-                        android:background="#00ffffff"
-                        android:textSize="15dp"
-                        />
-                </com.example.utils.custom.FloatLabeledEditText.FloatLabeledEditText>
+                    android:gravity="center"
+                    android:text="银行卡类型"
+                    />
+
+                <ImageView
+                    android:layout_width="1dp"
+                    app:layout_heightPercent="60%"
+                    app:layout_marginLeftPercent="27%"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/line_color"/>
+
+                <ImageView
+                    android:id="@+id/back_logo"
+                    app:layout_widthPercent="10%"
+                    app:layout_heightPercent="50%"
+                    app:layout_marginLeftPercent="35%"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/bankdef_logo"
+                    />
+
+                <TextView
+                    android:id="@+id/back_name"
+                    android:layout_width="wrap_content"
+                    app:layout_heightPercent="100%"
+                    app:layout_marginLeftPercent="48%"
+                    android:gravity="center"
+                    android:text="银行卡"
+                    android:textSize="15dp"
+                    />
 
             </android.support.percent.PercentFrameLayout>
 
             <!--预留手机号-->
             <android.support.percent.PercentFrameLayout
+                android:id="@+id/pf_phonenum"
                 android:layout_width="match_parent"
                 app:layout_heightPercent="12%"
                 app:layout_marginTopPercent="55.4%"
