--- a/HuaShanApp/app/src/main/res/layout/activity_bindcard.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_bindcard.xml
@@ -12,6 +12,7 @@
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
+        android:id="@+id/content_pl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -358,19 +359,24 @@
                     app:layout_heightPercent="50%"
                     app:layout_marginLeftPercent="35%"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/bankdef_logo"
                     />
 
                 <TextView
                     android:id="@+id/back_name"
-                    android:layout_width="wrap_content"
+                    app:layout_widthPercent="40%"
                     app:layout_heightPercent="100%"
                     app:layout_marginLeftPercent="48%"
-                    android:gravity="center"
-                    android:text="银行卡"
+                    android:gravity="center_vertical"
+                    android:text=""
                     android:textSize="15dp"
                     />
 
+                <ImageView
+                    app:layout_widthPercent="7%"
+                    app:layout_heightPercent="50%"
+                    android:layout_gravity="center_vertical|right"
+                    app:layout_marginRightPercent="5%"
+                    android:src="@drawable/goto_icon"/>
             </android.support.percent.PercentFrameLayout>
 
             <!--预留手机号-->
