--- a/HuaShanApp/app/src/main/res/layout/layout_bankcard_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_bankcard_item.xml
@@ -48,6 +48,7 @@
 
 
             <TextView
+                android:id="@+id/bank_name"
                 android:layout_width="wrap_content"
                 app:layout_heightPercent="24%"
                 android:gravity="center"
@@ -58,6 +59,7 @@
                 app:layout_marginLeftPercent="12%"/>
 
             <TextView
+                android:id="@+id/tv_cardnum"
                 android:layout_width="wrap_content"
                 app:layout_heightPercent="24%"
                 android:layout_gravity="right"
@@ -69,6 +71,7 @@
                 app:layout_marginRightPercent="5%"/>
 
             <TextView
+                android:id="@+id/tv_phonenum"
                 android:layout_width="wrap_content"
                 app:layout_heightPercent="20%"
                 android:layout_gravity="right"
@@ -78,7 +81,7 @@
                 android:textColor="#fff"
                 app:layout_marginTopPercent="15%"
                 app:layout_marginRightPercent="5%"
-                android:id="@+id/textView4" />
+                />
 
             <ImageView
                 app:layout_widthPercent="70%"
