--- a/HuaShanApp/app/src/main/res/layout/view_paymentmod_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_paymentmod_item.xml
@@ -8,7 +8,8 @@
    >
         <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
-            android:layout_height="85dp">
+            android:layout_height="85dp"
+            android:background="#fff">
 
 
                 <ImageView
