--- a/HuaShanApp/app/src/main/res/layout/activity_paymentmod.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_paymentmod.xml
@@ -77,21 +77,21 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
             >
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/payment_rl"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never">
+
+            </android.support.v7.widget.RecyclerView>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/line_color"/>
-
-            <LinearLayout
-                android:id="@+id/content_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            </LinearLayout>
 
 
         </android.support.percent.PercentFrameLayout>
