--- a/HuaShanApp/app/src/main/res/layout/view_paymentmod_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_paymentmod_item.xml
@@ -22,7 +22,7 @@
                     app:layout_widthPercent="78%"
                     app:layout_heightPercent="50%"
                     android:layout_gravity="right"
-                    android:text="账户余额"
+                    android:text="支付方式"
                     style="@style/Base.TextAppearance.AppCompat.Body1"
                     android:gravity="center_vertical|bottom"
                     android:textSize="18dp"/>
@@ -32,7 +32,7 @@
                     app:layout_widthPercent="78%"
                     app:layout_heightPercent="40%"
                     android:layout_gravity="right|bottom"
-                    android:text="可用余额 3,214.47"
+                    android:text="支付方式描述"
                     android:textSize="13dp"
                     android:textColor="#7b7b7b"/>
 
@@ -42,7 +42,7 @@
                     app:layout_heightPercent="55%"
                     android:layout_gravity="center_vertical"
                     app:layout_marginLeftPercent="5%"
-                    android:src="@drawable/zhye_icon"/>
+                    android:src="@drawable/bankdef_logo"/>
 
                 <TextView
                     android:id="@+id/bt_recharge"
